# kaggle_workshop

./: pyproject.toml
.dvc/: config
data/playground-series-s5e9/: .gitignore
outputs/s5e9/: .gitignore  metrics.json
playground/s5e8/: README.md  common.py  eda.ipynb  test.py  train.py
playground/s5e9/: common.py  dvc.yaml  eda.ipynb  params.yaml  preprocess.py  test.py  train.py  tune.py  validate.py
