[project]
name = "kaggle-workshop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "polars>=1.33.0",
    "prefect>=3.4.17",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]
